# kde-desktop-background-libvisual

./: .gitignore  CMakeLists.txt  LIBVISUAL_PLUGIN_COMPLETE.md  LICENSE  MODULE_ERROR_RESOLUTION.md  NEW_VISUALIZATIONS.qml  PLASMA_ANALYSIS.md  PLASMA_PLUGIN_COMPLETE.md  PLASMA_WALLPAPER_APPROACH.md  README.md  REAL_AUDIO_INTEGRATION.md  STATUS.md  SUMMARY.md  VISUALIZATIONS.md  build.sh  build_deb.sh  bump-version.sh  check_wallpaper_status.sh  diagnostics.sh  fftw_visualizer  fftw_visualizer.cpp  fresh_deployment_test.sh  install_debug_free.sh  install_deps.sh  libvisual-bg.conf.template  libvisual-bg.desktop  libvisual_debug_test  libvisual_debug_test.cpp  list_plugins.cpp  minimal_config_test.qml  minimal_libvisual_test  minimal_libvisual_test.cpp  minimal_test  minimal_test.cpp  qt6_test  qt6_test.cpp  simple_visualizer  simple_visualizer.cpp  test.sh  test_audiovisualizer.qml  (+11 more)
.github/: copilot-instructions.md
debian/: README.Debian  README.source  changelog  control  copyright  io.github.vitexsoftware.kde_desktop_background_libvisual.metainfo.xml  kde-desktop-background-libvisual.install  kde-desktop-background-libvisual.postinst  kde-desktop-background-libvisual.postrm  rules
plasma-wallpaper/: CMakeLists.txt  README.md  metadata.json  plasma-wallpaper-audiovisualizer.desktop.in  qmldir.in
plasma-wallpaper/contents/: metadata.desktop  metadata.json
plasma-wallpaper/contents/ui/: config.qml  main.qml
plasma-wallpaper/src/: audiovisualizerbackend.cpp  audiovisualizerbackend.h  plugin.cpp
plasma-wallpapers/org.kde.libvisual/: CMakeLists.txt  README.md  audiovisualizer.cpp  audiovisualizer.h  backend.cpp  backend.h  metadata.desktop  metadata.json  plasma_wallpaper_org.kde.libvisual.json  plugin.cpp  plugin.h  probe.cpp  probe.h  projectmitem.cpp  projectmitem.h  qmldir
plasma-wallpapers/org.kde.libvisual/contents/config/: main.xml
plasma-wallpapers/org.kde.libvisual/contents/shaders/: mandelbrot.frag
plasma-wallpapers/org.kde.libvisual/contents/ui/: config.qml  main.qml
src/: audio_input.cpp  audio_input.h  desktop_renderer.cpp  desktop_renderer.h  gui.cpp  gui.h  main.cpp  projectm_visualizer.cpp  projectm_visualizer.h  settings.cpp  settings.h  visualization_engine.h  visualization_factory.cpp  visualization_factory.h  visualizer.cpp  visualizer.h
